MODIFICACION CONTACTO Y RUTAS

--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
 var transport = nodemailer.createTransport({
-  host: "smtp.mailtrap.io",
-  port: 2525,
+  host:smtp.mailtrap.io
+  port: 2525
   auth: {
-    user: "53d23",
-    pass: "f2765"
+    user:5faabac1049ca9
+    pass:808d6b3348d9fb
   }
 });
-
